# vk-intern

./: CMakeLists.txt  README.md  genius.txt  main.cpp  suggestion.cpp  suggestion.h
Test_library/: main.cpp
auto_test/: auto_test  auto_test.cpp  auto_test.md
lib/correcter/: correcter.h
lib/parser/: parser.h
lib/query_generation/: query_generation.h
lib/solve/: solve.h
lib/suggestion/: suggestion.h
source/: correcter.cpp  parser.cpp  query_generation.cpp  solve.cpp  suggestion.cpp
suggest/: suggest  suggest.cpp  suggest.md
test_logs/: genius.txt
